# perm_setter

./: README.md  pyproject.toml
perm_setter/: hooks.py  modules.txt
perm_setter/api/: permission_handler.py
perm_setter/fixtures/: client_script.json  role.json
perm_setter/perm_setter/doctype/permission_handler/: permission_handler.js  permission_handler.json  permission_handler.py  test_permission_handler.py
